--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    }
+}
 
 android {
     compileSdkVersion 23
@@ -24,4 +34,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
 
     compile 'io.reactivex:rxjava:1.0.17'
+
+    // DI
+    apt 'com.google.dagger:dagger-compiler:2.0'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+    compile 'com.google.dagger:dagger:2.0'
 }
