--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,15 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta3'
 
+    // ReactiveX
     compile 'io.reactivex:rxjava:1.0.17'
+    compile 'io.reactivex:rxandroid:1.1.0'
 
     // DI
     apt 'com.google.dagger:dagger-compiler:2.0'
     provided 'org.glassfish:javax.annotation:10.0-b28'
     compile 'com.google.dagger:dagger:2.0'
+
+    // View Binding
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
