--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,11 @@ android {
     packagingOptions {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
+    lintOptions {
+        abortOnError false
+        disable 'InvalidPackage'
+        ignoreWarnings true
+    }
 }
 
 dependencies {
