--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ def versionPatch = 1
 
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 buildscript {
     repositories {
@@ -11,6 +12,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
     }
 }
 
@@ -39,6 +41,10 @@ android {
         abortOnError false
         disable 'InvalidPackage'
         ignoreWarnings true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
