--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,8 @@ dependencies:
   pre:
     - echo y | android update sdk --no-ui --all --filter "tools,platform-tools,android-23,extra-google-m2repository,extra-google-google_play_services,extra-android-support"
     - echo y | android update sdk --no-ui --all --filter "build-tools-23.0.2"
+  cache_directories:
+    - ~/.android
 
 deployment:
   production:
