--- a/circle.yml
+++ b/circle.yml
@@ -13,6 +13,6 @@ dependencies:
 
 deployment:
   production:
-    branch: [master, circle_ci]
+    branch: master
     commands:
       - ./gradlew uploadDeployGateRelease
