--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 def versionMajor = 0
 def versionMinor = 1
 def versionPatch = 1
+def versionBuild = 1
 
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
@@ -26,7 +27,7 @@ android {
         applicationId "tyfrontier.cleanarchitecturesample"
         minSdkVersion 19
         targetSdkVersion 23
-        versionCode versionMajor * 10000 + versionMinor * 100 + versionPatch
+        versionCode versionMajor * 1000000 + versionMinor * 10000 + versionPatch * 100 + versionBuild
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
     }
     signingConfigs {
