--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,11 +47,19 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            applicationIdSuffix '.debug'
+            versionNameSuffix "-debug"
+            manifestPlaceholders = [
+                    appName:"@string/app_name_debug",
+            ]
         }
         release {
             signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            manifestPlaceholders = [
+                    appName:"@string/app_name",
+            ]
         }
     }
     packagingOptions {
