--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
 
     // http client
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
