--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,7 +101,8 @@ dependencies {
     compile 'com.google.dagger:dagger:2.0'
 
     // View Binding
-    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.jakewharton:butterknife:8.0.1'
+    apt 'com.jakewharton:butterknife-compiler:8.0.1'
 
     // Unit Test
     testCompile 'junit:junit:4.12'
