--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,9 +87,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
 
     // http client
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta3'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
 
     // ReactiveX
     compile 'io.reactivex:rxjava:1.0.17'
