--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ android {
         }
         release {
             signingConfig signingConfigs.release
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             manifestPlaceholders = [
                     appName:"@string/app_name",
@@ -96,8 +96,8 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.1.0'
 
     // DI
-    compile 'com.google.dagger:dagger-compiler:2.0'
-    compile 'javax.annotation:javax.annotation-api:1.2'
+    apt 'com.google.dagger:dagger-compiler:2.0'
+    provided 'javax.annotation:jsr250-api:1.0'
     compile 'com.google.dagger:dagger:2.0'
 
     // View Binding
@@ -105,6 +105,7 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
 
     // Unit Test
+    testCompile 'com.google.dagger:dagger-compiler:2.0'
     testCompile 'junit:junit:4.12'
     testCompile('com.android.support.test:runner:0.4.1') {
         exclude group: 'com.android.support', module: 'support-annotations'
