--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ android {
         }
         release {
             signingConfig signingConfigs.release
+            shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             manifestPlaceholders = [
