replace memory cache with realm

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'deploygate'
+apply plugin: 'realm-android'
 
 buildscript {
     repositories {
@@ -16,6 +17,7 @@ buildscript {
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
         classpath 'com.deploygate:gradle:1.0.4'
+        classpath "io.realm:realm-gradle-plugin:0.90.0"
     }
 }
 
