--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,8 @@ dependencies:
     - echo y | android update sdk --no-ui --filter "build-tools-23.0.2"
   cache_directories:
     - ~/.android
+  override:
+      - echo ok
 
 deployment:
   production:
